fixed positioning of input buttons, fixed positioning of custom text input, made boxes default to a lower z-index

--- a/css/toolpanel.css
+++ b/css/toolpanel.css
@@ -97,11 +97,11 @@
 	z-index: 2;
 }
 .sizeControl a {
-	bottom: 7px;
-	right: 4px;
+	bottom: -7px;
+	right: -4px;
 	color: #21b9b0;
 	font-size: 30px;
-	position: relative;
+	position: absolute;
 }
 .options div {
     position: absolute;
